[package]
name = "jack-midi-sink"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jack = { path ="../../contrib/rust-jack" }
structopt = "0.2.18"
pretty_env_logger = "0.3.0"
log = "0.4.7"
nom-midi = "0.5.0"
